jsonpath2/parser/JSONPathParser.py
# Generated from jsonpath2/parser/JSONPath.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JSONPathParser ( Parser ):

    grammarFileName = "JSONPath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@'", "'..'", "'$'", "'.'", "'*'", "'and'", 
                     "'='", "'>='", "'>'", "'<='", "'<'", "'!='", "'not'", 
                     "'or'", "'true'", "'false'", "'null'", "'{'", "'}'", 
                     "'['", "']'", "':'", "','", "'('", "')'", "'?'" ]

    symbolicNames = [ "<INVALID>", "CURRENT_VALUE", "RECURSIVE_DESCENT", 
                      "ROOT_VALUE", "SUBSCRIPT", "WILDCARD_SUBSCRIPT", "AND", 
                      "EQ", "GE", "GT", "LE", "LT", "NE", "NOT", "OR", "TRUE", 
                      "FALSE", "NULL", "BRACE_LEFT", "BRACE_RIGHT", "BRACKET_LEFT", 
                      "BRACKET_RIGHT", "COLON", "COMMA", "PAREN_LEFT", "PAREN_RIGHT", 
                      "QUESTION", "ID", "STRING", "NUMBER", "WS" ]

    RULE_jsonpath = 0
    RULE_jsonpath_ = 1
    RULE_jsonpath__ = 2
    RULE_subscript = 3
    RULE_subscriptables = 4
    RULE_subscriptableBareword = 5
    RULE_subscriptable = 6
    RULE_sliceable = 7
    RULE_expression = 8
    RULE_andExpression = 9
    RULE_orExpression = 10
    RULE_notExpression = 11
    RULE_json = 12
    RULE_obj = 13
    RULE_pair = 14
    RULE_array = 15
    RULE_value = 16

    ruleNames =  [ "jsonpath", "jsonpath_", "jsonpath__", "subscript", "subscriptables", 
                   "subscriptableBareword", "subscriptable", "sliceable", 
                   "expression", "andExpression", "orExpression", "notExpression", 
                   "json", "obj", "pair", "array", "value" ]

    EOF = Token.EOF
    CURRENT_VALUE=1
    RECURSIVE_DESCENT=2
    ROOT_VALUE=3
    SUBSCRIPT=4
    WILDCARD_SUBSCRIPT=5
    AND=6
    EQ=7
    GE=8
    GT=9
    LE=10
    LT=11
    NE=12
    NOT=13
    OR=14
    TRUE=15
    FALSE=16
    NULL=17
    BRACE_LEFT=18
    BRACE_RIGHT=19
    BRACKET_LEFT=20
    BRACKET_RIGHT=21
    COLON=22
    COMMA=23
    PAREN_LEFT=24
    PAREN_RIGHT=25
    QUESTION=26
    ID=27
    STRING=28
    NUMBER=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class JsonpathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOT_VALUE(self):
            return self.getToken(JSONPathParser.ROOT_VALUE, 0)

        def EOF(self):
            return self.getToken(JSONPathParser.EOF, 0)

        def subscript(self):
            return self.getTypedRuleContext(JSONPathParser.SubscriptContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_jsonpath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJsonpath" ):
                listener.enterJsonpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJsonpath" ):
                listener.exitJsonpath(self)




    def jsonpath(self):

        localctx = JSONPathParser.JsonpathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_jsonpath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(JSONPathParser.ROOT_VALUE)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.RECURSIVE_DESCENT) | (1 << JSONPathParser.SUBSCRIPT) | (1 << JSONPathParser.BRACKET_LEFT))) != 0):
                self.state = 35
                self.subscript()


            self.state = 38
            self.match(JSONPathParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jsonpath_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOT_VALUE(self):
            return self.getToken(JSONPathParser.ROOT_VALUE, 0)

        def CURRENT_VALUE(self):
            return self.getToken(JSONPathParser.CURRENT_VALUE, 0)

        def subscript(self):
            return self.getTypedRuleContext(JSONPathParser.SubscriptContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_jsonpath_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJsonpath_" ):
                listener.enterJsonpath_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJsonpath_" ):
                listener.exitJsonpath_(self)




    def jsonpath_(self):

        localctx = JSONPathParser.Jsonpath_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_jsonpath_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            _la = self._input.LA(1)
            if not(_la==JSONPathParser.CURRENT_VALUE or _la==JSONPathParser.ROOT_VALUE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.RECURSIVE_DESCENT) | (1 << JSONPathParser.SUBSCRIPT) | (1 << JSONPathParser.BRACKET_LEFT))) != 0):
                self.state = 41
                self.subscript()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jsonpath__Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jsonpath_(self):
            return self.getTypedRuleContext(JSONPathParser.Jsonpath_Context,0)


        def value(self):
            return self.getTypedRuleContext(JSONPathParser.ValueContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_jsonpath__

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJsonpath__" ):
                listener.enterJsonpath__(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJsonpath__" ):
                listener.exitJsonpath__(self)




    def jsonpath__(self):

        localctx = JSONPathParser.Jsonpath__Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_jsonpath__)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JSONPathParser.CURRENT_VALUE, JSONPathParser.ROOT_VALUE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.jsonpath_()
                pass
            elif token in [JSONPathParser.TRUE, JSONPathParser.FALSE, JSONPathParser.NULL, JSONPathParser.BRACE_LEFT, JSONPathParser.BRACKET_LEFT, JSONPathParser.STRING, JSONPathParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubscriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECURSIVE_DESCENT(self):
            return self.getToken(JSONPathParser.RECURSIVE_DESCENT, 0)

        def subscriptableBareword(self):
            return self.getTypedRuleContext(JSONPathParser.SubscriptableBarewordContext,0)


        def subscriptables(self):
            return self.getTypedRuleContext(JSONPathParser.SubscriptablesContext,0)


        def subscript(self):
            return self.getTypedRuleContext(JSONPathParser.SubscriptContext,0)


        def SUBSCRIPT(self):
            return self.getToken(JSONPathParser.SUBSCRIPT, 0)

        def getRuleIndex(self):
            return JSONPathParser.RULE_subscript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubscript" ):
                listener.enterSubscript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubscript" ):
                listener.exitSubscript(self)




    def subscript(self):

        localctx = JSONPathParser.SubscriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subscript)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JSONPathParser.RECURSIVE_DESCENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(JSONPathParser.RECURSIVE_DESCENT)
                self.state = 51
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [JSONPathParser.WILDCARD_SUBSCRIPT, JSONPathParser.ID]:
                    self.state = 49
                    self.subscriptableBareword()
                    pass
                elif token in [JSONPathParser.BRACKET_LEFT]:
                    self.state = 50
                    self.subscriptables()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.RECURSIVE_DESCENT) | (1 << JSONPathParser.SUBSCRIPT) | (1 << JSONPathParser.BRACKET_LEFT))) != 0):
                    self.state = 53
                    self.subscript()


                pass
            elif token in [JSONPathParser.SUBSCRIPT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(JSONPathParser.SUBSCRIPT)
                self.state = 57
                self.subscriptableBareword()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.RECURSIVE_DESCENT) | (1 << JSONPathParser.SUBSCRIPT) | (1 << JSONPathParser.BRACKET_LEFT))) != 0):
                    self.state = 58
                    self.subscript()


                pass
            elif token in [JSONPathParser.BRACKET_LEFT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.subscriptables()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.RECURSIVE_DESCENT) | (1 << JSONPathParser.SUBSCRIPT) | (1 << JSONPathParser.BRACKET_LEFT))) != 0):
                    self.state = 62
                    self.subscript()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubscriptablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BRACKET_LEFT(self):
            return self.getToken(JSONPathParser.BRACKET_LEFT, 0)

        def subscriptable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSONPathParser.SubscriptableContext)
            else:
                return self.getTypedRuleContext(JSONPathParser.SubscriptableContext,i)


        def BRACKET_RIGHT(self):
            return self.getToken(JSONPathParser.BRACKET_RIGHT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSONPathParser.COMMA)
            else:
                return self.getToken(JSONPathParser.COMMA, i)

        def getRuleIndex(self):
            return JSONPathParser.RULE_subscriptables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubscriptables" ):
                listener.enterSubscriptables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubscriptables" ):
                listener.exitSubscriptables(self)




    def subscriptables(self):

        localctx = JSONPathParser.SubscriptablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subscriptables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(JSONPathParser.BRACKET_LEFT)
            self.state = 68
            self.subscriptable()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JSONPathParser.COMMA:
                self.state = 69
                self.match(JSONPathParser.COMMA)
                self.state = 70
                self.subscriptable()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(JSONPathParser.BRACKET_RIGHT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubscriptableBarewordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JSONPathParser.ID, 0)

        def WILDCARD_SUBSCRIPT(self):
            return self.getToken(JSONPathParser.WILDCARD_SUBSCRIPT, 0)

        def getRuleIndex(self):
            return JSONPathParser.RULE_subscriptableBareword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubscriptableBareword" ):
                listener.enterSubscriptableBareword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubscriptableBareword" ):
                listener.exitSubscriptableBareword(self)




    def subscriptableBareword(self):

        localctx = JSONPathParser.SubscriptableBarewordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subscriptableBareword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not(_la==JSONPathParser.WILDCARD_SUBSCRIPT or _la==JSONPathParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubscriptableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JSONPathParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(JSONPathParser.NUMBER, 0)

        def sliceable(self):
            return self.getTypedRuleContext(JSONPathParser.SliceableContext,0)


        def WILDCARD_SUBSCRIPT(self):
            return self.getToken(JSONPathParser.WILDCARD_SUBSCRIPT, 0)

        def QUESTION(self):
            return self.getToken(JSONPathParser.QUESTION, 0)

        def PAREN_LEFT(self):
            return self.getToken(JSONPathParser.PAREN_LEFT, 0)

        def expression(self):
            return self.getTypedRuleContext(JSONPathParser.ExpressionContext,0)


        def PAREN_RIGHT(self):
            return self.getToken(JSONPathParser.PAREN_RIGHT, 0)

        def jsonpath_(self):
            return self.getTypedRuleContext(JSONPathParser.Jsonpath_Context,0)



        def getRuleIndex(self):
            return JSONPathParser.RULE_subscriptable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubscriptable" ):
                listener.enterSubscriptable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubscriptable" ):
                listener.exitSubscriptable(self)




    def subscriptable(self):

        localctx = JSONPathParser.SubscriptableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subscriptable)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JSONPathParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(JSONPathParser.STRING)
                pass
            elif token in [JSONPathParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(JSONPathParser.NUMBER)
                self.state = 82
                if not self.tryCast(int):
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "self.tryCast(int)")
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.COLON:
                    self.state = 83
                    self.sliceable()


                pass
            elif token in [JSONPathParser.COLON]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.sliceable()
                pass
            elif token in [JSONPathParser.WILDCARD_SUBSCRIPT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.match(JSONPathParser.WILDCARD_SUBSCRIPT)
                pass
            elif token in [JSONPathParser.QUESTION]:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.match(JSONPathParser.QUESTION)
                self.state = 89
                self.match(JSONPathParser.PAREN_LEFT)
                self.state = 90
                self.expression()
                self.state = 91
                self.match(JSONPathParser.PAREN_RIGHT)
                pass
            elif token in [JSONPathParser.CURRENT_VALUE, JSONPathParser.ROOT_VALUE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.jsonpath_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SliceableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(JSONPathParser.COLON)
            else:
                return self.getToken(JSONPathParser.COLON, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(JSONPathParser.NUMBER)
            else:
                return self.getToken(JSONPathParser.NUMBER, i)

        def getRuleIndex(self):
            return JSONPathParser.RULE_sliceable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSliceable" ):
                listener.enterSliceable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSliceable" ):
                listener.exitSliceable(self)




    def sliceable(self):

        localctx = JSONPathParser.SliceableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sliceable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(JSONPathParser.COLON)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JSONPathParser.NUMBER:
                self.state = 97
                self.match(JSONPathParser.NUMBER)
                self.state = 98
                if not self.tryCast(int):
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "self.tryCast(int)")


            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JSONPathParser.COLON:
                self.state = 101
                self.match(JSONPathParser.COLON)
                self.state = 102
                self.match(JSONPathParser.NUMBER)
                self.state = 103
                if not self.tryCast(int):
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "self.tryCast(int)")


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpression(self):
            return self.getTypedRuleContext(JSONPathParser.AndExpressionContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = JSONPathParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.andExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AndExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpression(self):
            return self.getTypedRuleContext(JSONPathParser.OrExpressionContext,0)


        def AND(self):
            return self.getToken(JSONPathParser.AND, 0)

        def andExpression(self):
            return self.getTypedRuleContext(JSONPathParser.AndExpressionContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_andExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpression" ):
                listener.enterAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpression" ):
                listener.exitAndExpression(self)




    def andExpression(self):

        localctx = JSONPathParser.AndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_andExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.orExpression()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JSONPathParser.AND:
                self.state = 109
                self.match(JSONPathParser.AND)
                self.state = 110
                self.andExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notExpression(self):
            return self.getTypedRuleContext(JSONPathParser.NotExpressionContext,0)


        def OR(self):
            return self.getToken(JSONPathParser.OR, 0)

        def orExpression(self):
            return self.getTypedRuleContext(JSONPathParser.OrExpressionContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_orExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpression" ):
                listener.enterOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpression" ):
                listener.exitOrExpression(self)




    def orExpression(self):

        localctx = JSONPathParser.OrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_orExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.notExpression()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JSONPathParser.OR:
                self.state = 114
                self.match(JSONPathParser.OR)
                self.state = 115
                self.orExpression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NotExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(JSONPathParser.NOT, 0)

        def notExpression(self):
            return self.getTypedRuleContext(JSONPathParser.NotExpressionContext,0)


        def PAREN_LEFT(self):
            return self.getToken(JSONPathParser.PAREN_LEFT, 0)

        def expression(self):
            return self.getTypedRuleContext(JSONPathParser.ExpressionContext,0)


        def PAREN_RIGHT(self):
            return self.getToken(JSONPathParser.PAREN_RIGHT, 0)

        def jsonpath__(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSONPathParser.Jsonpath__Context)
            else:
                return self.getTypedRuleContext(JSONPathParser.Jsonpath__Context,i)


        def EQ(self):
            return self.getToken(JSONPathParser.EQ, 0)

        def NE(self):
            return self.getToken(JSONPathParser.NE, 0)

        def LT(self):
            return self.getToken(JSONPathParser.LT, 0)

        def LE(self):
            return self.getToken(JSONPathParser.LE, 0)

        def GT(self):
            return self.getToken(JSONPathParser.GT, 0)

        def GE(self):
            return self.getToken(JSONPathParser.GE, 0)

        def getRuleIndex(self):
            return JSONPathParser.RULE_notExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpression" ):
                listener.enterNotExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpression" ):
                listener.exitNotExpression(self)




    def notExpression(self):

        localctx = JSONPathParser.NotExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_notExpression)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JSONPathParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(JSONPathParser.NOT)
                self.state = 119
                self.notExpression()
                pass
            elif token in [JSONPathParser.PAREN_LEFT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(JSONPathParser.PAREN_LEFT)
                self.state = 121
                self.expression()
                self.state = 122
                self.match(JSONPathParser.PAREN_RIGHT)
                pass
            elif token in [JSONPathParser.CURRENT_VALUE, JSONPathParser.ROOT_VALUE, JSONPathParser.TRUE, JSONPathParser.FALSE, JSONPathParser.NULL, JSONPathParser.BRACE_LEFT, JSONPathParser.BRACKET_LEFT, JSONPathParser.STRING, JSONPathParser.NUMBER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.jsonpath__()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.EQ) | (1 << JSONPathParser.GE) | (1 << JSONPathParser.GT) | (1 << JSONPathParser.LE) | (1 << JSONPathParser.LT) | (1 << JSONPathParser.NE))) != 0):
                    self.state = 125
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.EQ) | (1 << JSONPathParser.GE) | (1 << JSONPathParser.GT) | (1 << JSONPathParser.LE) | (1 << JSONPathParser.LT) | (1 << JSONPathParser.NE))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 126
                    self.jsonpath__()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class JsonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(JSONPathParser.ValueContext,0)


        def getRuleIndex(self):
            return JSONPathParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)




    def json(self):

        localctx = JSONPathParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_json)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BRACE_LEFT(self):
            return self.getToken(JSONPathParser.BRACE_LEFT, 0)
